	check_dig now returns CRITICAL instead of WARNING when no answer section is found
	check_procs now captures stderr in external command and adds to plugin output
	check_snmp now only prints perfdata for non numeric values (#1867716)
	check_icmp now supports packet size modification
	check_http now sends the Host header first to fix 301s on servers with vitrual hosts (Michael Harris).
	libtap now included with this distribution for easier testing. Run ./configure with --enable-libtap

1.4.12 27th May 2008
	Added ./check_nt -v INSTANCES to count number of instances (Alessandro Ren)
	New check_icmp -s option to specify the source IP address
	check_dns now sorts addresses for testing results for more than one returned IP (Matthias Urlichs)
	Fix segfault in check_ntp_time and (deprecated) check_ntp (Bug #1862300)
	check_disk should now work with large file systems (2TB+) on all archs that supports it
	Fixed check_disk disk usage calculation when using --group=NAME (related to bug #1348746)
	Fix help text of check_ntp* (Bug #1880095)
	Fix bugs and flaws in best offset server selection of check_ntp_time and (deprecated) check_ntp
	check_ntp_peer now checks for the LI_ALARM flag
	Sync to latest Gnulib (includes new floorf function)
	check_pgsql now successfully builds with postgres lib v8.3 (Bug #1878972)  
	check_procs now accepts --ereg-argument-array for a regular expression match to the argument array
	Reverted back to using pst3 for Solaris systems. Fixed issues re: -m64 needed to compile on 64bit systems
	If applicable, Gettext linked dynamically instead of statically
	check_dig can now pass arguments to dig by using -A/--dig-arguments (#1874041/#1889453)
	check_ntp and check_ntp_peer now show proper jitter/stratum thresholds longopts in --help
	check_dns now allow to repeat -a to match multiple possibly returned address (common with load balancers)
	check_mysql and check_radius now try clearing password in processlist just like check_mysql_query